# time_varying_survival_analysis

./: .gitmodules  Dockerfile  LICENSE  README.md  map_missing_reimbursement.py  plot_dates.py  plot_demo_survival.py  pyproject.toml
credit_risk_models/azure_credentials_keyvault/: db_credentials.py  ml_client.py
credit_risk_models/azureml_pipelines/: Readme.md  __init__.py  azureml_config.py  survboost_prediction_component.py  survboost_prediction_pipeline.py
credit_risk_models/azureml_pipelines/azureml_env/: create_cluster.py  create_environment.py
credit_risk_models/risk_model_survival_analysis/: _audits.py  _automative.py  _company_data.py  _loans.py  _logs.py  _make_dataset.py  _metrics.py  _plots.py  _predict.py  _train.py  _utils.py  db.py  survboost_prediction.py
credit_risk_models/risk_model_survival_analysis/tests/: test_audits.py  test_make_dataset.py
downloaded_model/SurvivalBoost/training_run_2024-11-11_18_33_44/: model.pkl
training_run_2024-10-24_14_06/: kaplan_meier.pkl
